# scaffold-wizard

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.js  build.rs  cbindgen.toml  rust-toolchain
.boilerplate/darwin/lib/: libatk-1.0.0.dylib  libcairo-gobject.2.dylib  libcairo.2.dylib  libgdk-3.0.dylib  libgdk_pixbuf-2.0.0.dylib  libgio-2.0.0.dylib  libglib-2.0.0.dylib  libgobject-2.0.0.dylib  libharfbuzz.0.dylib  libintl.8.dylib  libpango-1.0.0.dylib  libpangocairo-1.0.0.dylib
.boilerplate/lib/gdk-pixbuf-2.0/2.10.0/: loaders.cache
.boilerplate/win32/share/glib-2.0/schemas/: gschemas.compiled
.boilerplate/win32/share/icons/hicolor/: icon-theme.cache
assets/: answers-unit_test.json  log4rs.json  prompt-manifest.json
dll-invocation-examples/: .eslintignore  index.js  index.sh  index_wrapper.js  package-lock.json  package.json  pnpm-lock.yaml
npm-module/: .eslintignore  .eslintrc.js  .gitignore  README.md  download.js  engine.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  post-install.js  prompt-manifest.json  test.js  utils.js
src/: bin-cli.yaml  bin.rs  lib.rs  main.rs  render.rs  utils.rs  window.glade
src/main/: render.rs  utils.rs
src/main/render/: error-dialog.rs  prompt-input-port.rs  prompt-input-text.rs  prompt-page.rs  prompt-radio.rs
src/main/utils/: error.rs
src/render/: prompt-checkbox.rs  prompt-switch.rs
