[package]
name = "scaffold-wizard"
version = "0.0.1"
authors = ["stuart_zhang <stuartpage@qq.com>"]
edition = "2018"
license = "MIT"
description = "scaffold-wizard 图形界面应用程序"

[features]

[dependencies]
eval = "^0.4"
gio = {version = "0", features = ["v2_44"]}
glib = "0.10.3"
gtk = {version = "0.9.2", features = ["v3_24"]}
log = "0.4.14"
log4rs = {version = "1.0.0", features = ["all_components", "config_parsing", "json_format", "gzip", "background_rotation"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
