[package]
name = "scaffold-wizard"
version = "0.0.1"
authors = ["stuart_zhang <stuartpage@qq.com>"]
edition = "2018"
license = "MIT"
description = "scaffold-wizard 图形界面应用程序"

[[bin]]
name = "scaffold-wizard"
path = "src/bin.rs"

[lib]
crate-type = ["cdylib"]
name = "scaffold_wizard"
path = "src/lib.rs"

[features]

[dependencies]
clap = {version = "2.33.3", features = ["yaml"]}
eval = "^0.4"
gdk-pixbuf = "0.9.0"
gio = {version = "0", features = ["v2_44"]}
glib = "0.10.3"
gtk = {version = "0.9.2", features = ["v3_24"]}
log = "0.4.14"
log4rs = {version = "1.0.0", features = ["all_components", "config_parsing", "json_format", "gzip", "background_rotation"]}
quick-xml = {version = "0.22.0", features = ["encoding_rs"]}
regex = "1"
serde_json = {version = "1.0", features = ["preserve_order"]}

[dev-dependencies]
async-std = {version = "1.9.0", features = ["unstable"]}
lazy_static = "1.4.0"
mut_static = "5.0.0"

[build-dependencies]
cbindgen = "0.24.3"
